# rust-doodle

./: .gitignore  CLAUDE.md  LICENSE  README.md
cross-platform/bevy-ui-showcase/: Cargo.toml  README.md
cross-platform/bevy-ui-showcase/src/: animations_section.rs  layout_section.rs  main.rs  nav.rs  theme.rs  theming_section.rs  tween.rs  widgets_section.rs
cross-platform/hello-bevy/: Cargo.toml
cross-platform/hello-bevy-advanced/: Cargo.toml
cross-platform/hello-bevy-advanced/assets/: config.ron
cross-platform/hello-bevy-advanced/assets/shaders/: spotlight.wgsl
cross-platform/hello-bevy-advanced/src/: config.rs  lib.rs  main.rs  particles.rs  spotlight.rs  text_wave.rs
cross-platform/hello-bevy/assets/: config.ron
cross-platform/hello-bevy/src/: main.rs
cross-platform/rust-poet/: Cargo.toml  README.md  WALKTHROUGH.md  poet.example.ron
cross-platform/rust-poet/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  poet.rs  prompt.rs  test_utils.rs
cross-platform/rust-poet/src/provider/: anthropic.rs  mistral.rs  mod.rs  openai.rs  openai_like.rs
cross-platform/rust-poet/src/topic/: fixed.rs  mod.rs  random.rs  wikipedia.rs
cross-platform/rust-poet/tests/: anthropic_wire.rs  live_tests.rs  mistral_wire.rs  openai_wire.rs  poet_pipeline.rs  wikipedia_source.rs
cross-platform/rust-poet/tests/live/: anthropic.rs  mistral.rs  openai.rs
docs/: bevy-android.md
docs/superpowers/plans/: 2026-04-26-hello-bevy-advanced.md  2026-04-27-rust-poet.md  2026-05-09-bevy-ui-showcase-theming.md  2026-05-11-bevy-ui-showcase-animations.md  2026-05-11-bevy-ui-showcase-polish-docs.md
docs/superpowers/specs/: 2026-04-26-hello-bevy-advanced-design.md  2026-04-27-rust-poet-design.md  2026-05-09-bevy-ui-showcase-theming-design.md  2026-05-10-bevy-ui-showcase-animations-design.md  2026-05-11-bevy-ui-showcase-polish-docs-design.md
