[package]
name = "rust-poet"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rust-poet"
path = "src/main.rs"

[features]
test-utils = []
live-tests = []

[dependencies]
tokio              = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
ron                = "0.12"
clap               = { version = "4", features = ["derive"] }
async-trait        = "0.1"
thiserror          = "2"
anyhow             = "1"
chrono             = { version = "0.4", default-features = false, features = ["clock"] }
rand               = "0.10"
directories        = "6"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
wiremock = "0.6"
